--- a/app/views/konacha/specs/specs.html.erb
+++ b/app/views/konacha/specs/specs.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag "mocha",   :debug => false %>
     <%= stylesheet_link_tag "konacha", :debug => false %>
     <%= javascript_include_tag "mocha", "chai", "konacha/#{Konacha.mode}", :debug => false %>
-    <%= javascript_include_tag("konacha_config", :debug => false) if Rails.application.assets.find_asset('konacha_config') %>
+    <%= javascript_include_tag("konacha_config", :debug => true) if Rails.application.assets.find_asset('konacha_config') %>
     <%= javascript_include_tag "konacha", :debug => false %>
     <%= spec_include_tag *@specs %>
   </head>
